Update index.html to point to 361points

--- a/index.html
+++ b/index.html
@@ -1,7 +1,16 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="refresh" content="0; url=https://www.newwebsite.com">
+    <title>Redirecting...</title>
+    <link rel="canonical" href="https://alphatamago.github.io/361points/study.html">
+    <script>
+        // Optional: A small JavaScript fallback just in case the meta refresh fails (rare)
+        window.location.replace('https://alphatamago.github.io/361points/study.html');
+    </script>
+</head>
 <body>
-<h1>Hello World</h1>
-<p>I'm hosted with GitHub Pages.</p>
+    <p>If you are not redirected automatically, <a href="https://www.newwebsite.com">click here</a>.</p>
 </body>
 </html>
