--- a/index.html
+++ b/index.html
@@ -2,15 +2,15 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="refresh" content="0; url=https://www.newwebsite.com">
+    <meta http-equiv="refresh" content="0; url=https://alphatamago.github.io/361points/how_to_study.html">
     <title>Redirecting...</title>
-    <link rel="canonical" href="https://alphatamago.github.io/361points/study.html">
+    <link rel="canonical" href="https://alphatamago.github.io/361points/how_to_study.html">
     <script>
         // Optional: A small JavaScript fallback just in case the meta refresh fails (rare)
-        window.location.replace('https://alphatamago.github.io/361points/study.html');
+        window.location.replace('https://alphatamago.github.io/361points/how_to_study.html');
     </script>
 </head>
 <body>
-    <p>If you are not redirected automatically, <a href="https://www.newwebsite.com">click here</a>.</p>
+    <p>If you are not redirected automatically, <a href="https://alphatamago.github.io/361points/how_to_study.html">click here</a>.</p>
 </body>
 </html>
